[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Paddel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://TopScreenEdge.gd" type="Script" id=4]
[ext_resource path="res://LeftScreenEdge.gd" type="Script" id=5]
[ext_resource path="res://RightScreenEdge.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/Bounce1.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Paddel" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 500, 0 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 441.651, 260.77 )

[node name="TopScreenEdge" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopScreenEdge"]
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="LeftScreenEdge" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftScreenEdge"]
shape = SubResource( 2 )
script = ExtResource( 5 )

[node name="RightScreenEdge" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightScreenEdge"]
shape = SubResource( 3 )
script = ExtResource( 6 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Bounce1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
attenuation = 1.0
[connection signal="collided" from="Ball" to="." method="_on_Ball_collided"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
